--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -128,8 +128,7 @@
       - id: IDComputerCircuitboard
       - id: WeaponDisabler
       - id: ClothingOuterCoatHoPArmored # DeltaV
-      - id: ClothingOuterArmorDuraVest # DeltaV - replaced HoP's armoured coat with a standard stabproof, pending HoPcoat resprite
-      - id: ClothingOuterCoatHoPFormal # DeltaV - formal jacket
+      - id: ClothingOuterWinterHoP
       - id: CigarGoldCase
         prob: 0.25
         # Fuck the HoP they don't deserve fucking cigars.
@@ -144,12 +143,10 @@
       - id: AccessConfigurator
       - id: BookIanDossier # DeltaV - HoP steal objective, see Resources/Prototypes/DeltaV/Entities/Objects/Misc/ian_dossier.yml
       - id: ClothingHandsGlovesInspection # DeltaV - Add inspection gloves for HoP.
-      - id: ClothingUniformJumpsuitHoPMess # DeltaV - Add mess kit for HoP.
-      - id: ClothingUniformJumpskirtHoPMess # DeltaV - Add mess kit for HoP.
-      - id: ClothingUniformJumpsuitBoatswain # DeltaV - Add turtleneck for HoP.
       - id: ClothingShoesBootsLaceup # DeltaV - add fancy shoes for HoP and cap
       - id: ClothingShoesMiscWhite # DeltaV - add fancy shoes for HoP and cap
       - id: ClothingShoesBootsWinterHeadOfPersonel #Delta V: Add departmental winter boots
+      - id: DrinkRussianCan
 
 - type: entity
   id: LockerChiefEngineerFilledHardsuit
