--- a/Resources/Prototypes/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hats.yml
@@ -122,7 +122,7 @@
 - type: entity
   parent: ClothingHeadBase
   id: ClothingHeadHatBeretHoS
-  name: head of security's beret
+  name: Gorlex Commanders beret
   description: A black beret with a commander's rank emblem. For officers that are more inclined towards style than safety.
   components:
   - type: Sprite
@@ -194,7 +194,7 @@
   parent: ClothingHeadBase
   id: ClothingHeadHatCaptain
   name: captain's hardhat
-  description: It's good being the king.
+  description: It's good being the king A tag on the inside reads "Property of Gorlex Commander.". A plasteel plate surrounds the inside aswell.
   components:
   - type: Sprite
     sprite: Clothing/Head/Hats/captain.rsi
@@ -315,7 +315,7 @@
 - type: entity
   parent: ClothingHeadBase
   id: ClothingHeadHatHoshat
-  name: head of security's hat
+  name: Gorlex Commander's hat
   description: "There's a new sheriff in station."
   components:
   - type: Sprite
